# tyui

./: CLAUDE.md  README.md  claude.sh  pyproject.toml
docs/superpowers/plans/: 2026-05-30-syntax-highlighting.md  2026-05-30-we-console-editor.md  2026-05-31-project-view.md  2026-06-08-user-menu.md
docs/superpowers/specs/: 2026-05-30-syntax-highlighting-design.md  2026-05-30-we-console-editor-design.md  2026-05-31-project-view-design.md  2026-06-07-file-panel-mouse-wheel-cursor-design.md  2026-06-07-relay-kitty-transparent-handover-design.md  2026-06-08-user-menu-design.md
dunders/: app.py
dunders/config/: bookmarks.py
dunders/core/plugins/: __init__.py  api.py  events.py  loader.py  plugin.py
dunders/core/vfs/: provider.py
dunders/fm/: dialogs.py  file_panel.py  vfs_local.py
dunders/fm/providers/: ftp_provider.py  sevenzip_provider.py  sftp_provider.py  zip_provider.py
dunders/sdk/: __init__.py
dunders/windowing/editor/: content.py
tests/: conftest.py  test_buffer.py  test_key_probe.py  test_user_config.py
tests/config/: test_bookmarks.py
tests/core/: test_plugins.py
tests/fm/: test_app_skeleton.py  test_archive_edit.py  test_archive_extract.py  test_archive_guard.py  test_async_scan.py  test_bookmarks_app.py  test_cmdline_panel_nav.py  test_commandline.py  test_copy_path_button.py  test_dialogs.py  test_dunders_menu.py  test_file_colors.py  test_file_panel.py  test_file_panel_quick_search.py  test_find_file.py  test_find_file_dialog.py  test_find_results.py  test_ftp_provider.py  test_insert_filename.py  test_main_we.py  test_panel_close_hide.py  test_panel_view.py  test_panel_zip_nav.py  test_panels_fullscreen.py  test_plugin_app.py  test_project_view.py  test_provider_prefix.py  test_resize_relayout.py  test_run_executable.py  test_run_mode_toggle.py  test_sevenzip_provider.py  test_shared_registry.py  test_theme_load_errors.py  test_tray_restore.py  test_user_menu.py  test_user_menu_app.py  test_user_menu_dialog.py  test_user_menu_loader.py  test_vfs_engine.py  test_we_hotkeys.py  (+4 more)
tests/fm/console/: test_ansi.py  test_app_console.py  test_app_focus.py  test_backend_switch.py  test_buffer.py  test_handover.py  test_history.py  test_pty_be.py  test_registry.py  test_runner.py  test_subprocess_be.py  test_window.py
tests/windowing/: test_editor_content.py  test_editor_highlight.py  test_editor_widget.py  test_focus_panel_reveal.py  test_frame.py  test_highlight.py  test_language_picker.py  test_open_file.py  test_palette.py  test_replace_dialog.py  test_theme_256_safe.py
tyui/: app.py  main.py
tyui/config/: user_config.py
tyui/fm/: actions.py  commandline.py  dialogs.py  file_entry.py  file_panel.py  find_file.py  find_results.py  key_probe.py  keymap.py  panel_view.py  scan.py  user_menu.py  user_menu_dialog.py  user_menu_loader.py
tyui/fm/console/: HANDOVER.md  ansi.py  buffer.py  handover.py  history.py  registry.py  runner.py  window.py
tyui/fm/console/backends/: __init__.py  base.py  pty_be.py  subprocess_be.py
tyui/windowing/: __init__.py  command_palette.py  content.py  desktop.py  frame.py  helpers.py  manager.py  status_bar.py  window.py
tyui/windowing/core/: buffer.py  highlight.py
tyui/windowing/demo/: app.py
tyui/windowing/editor/: content.py  language_picker.py  replace_dialog.py  widget.py
tyui/windowing/themes/: __init__.py  loader.py  modern_dark.py
tyui/windowing/themes/examples/: autumn.toml  catppuccin_mocha.toml  dracula.toml  gruvbox_dark.toml  midnight_commander.toml  monokai.toml  nord.toml  paper_light.toml  safe_dark.toml  safe_light.toml  safe_nord.toml  solarized_dark.toml  spring.toml  summer.toml  tokyo_night.toml  turbo_blue.toml  winter.toml
