[project]
name = "dunders"
version = "0.1.0"
description = "dunders — fill in the blank: an open-source terminal platform on Textual where everything is a panel. We ship the underscores; you write what goes between them — a dual-pane EVERYTHING manager: files, editor, LLM-agent CLI, and whatever you plug in."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "tumikosha", email = "tumikosha@gmail.com" },
]
keywords = [
    "tui",
    "terminal",
    "textual",
    "editor",
    "file-manager",
    "norton-commander",
    "mc",
    "midnight-commander",
    "folding",
    "macros",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=3.0.0",
    "ptyprocess>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyftpdlib>=1.5",  # local FTP server for FtpProvider integration tests
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage      = "https://github.com/tumikosha/dunders"
Repository    = "https://github.com/tumikosha/dunders"
Issues        = "https://github.com/tumikosha/dunders/issues"
Documentation = "https://github.com/tumikosha/dunders#readme"

[project.scripts]
dunders = "dunders.main:main"
__ = "dunders.main:main_we"
__w = "dunders.main:main_wew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dunders"]

[tool.hatch.build.targets.wheel.force-include]
"dunders/themes/dark.yaml"  = "dunders/themes/dark.yaml"
"dunders/themes/light.yaml" = "dunders/themes/light.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "dunders/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "tests",
    "docs",
    "vibe",
    ".omc",
    ".idea",
    ".venv",
    "uv.lock",
    "claude.sh",
    "install_global.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
